# unguided-capstone-project

./: .editorconfig  .gitattributes  .gitignore  DirScope Command.txt  Makefile  README.md  Scratch_Pad.ipynb  To Do Development.md  _databricks.yml  check_env.sh  check_paths.py  config.json  deploy_to_azure_test.sh  deploy_to_vm.sh  diagnose_paths.py  dog.txt  env_snapshot.txt  git_tag_audit.sh  index.md  install_requirements.sh  job_step9.json  orchestrator_trace.txt  pyproject.toml  pytest.ini  rebuild_venv.sh  requirements.txt  requirements_cluster.txt  requirements_locked.txt  requirements_stable.txt  run_pipeline_safe.sh  setup_env.ps1.template
Docs/: Musical_Diversity_in_Movies_Proposal.md
archive/: step_01_audit_raw.py  step_02_cleanse_tsv.py  step_03_util_check_tsv_structure.py  step_03b_rehydrate_guids.py  step_04_mb_full_join.py  step_05_filter_soundtracks_enhanced.py  step_08_match_tmdb.py
conf/: log4j.properties
data/: discogs_tag_summary.csv  movie_titles_200.txt
docs/: 00_Capstone_Environment_Sync_Playbook.md  01_GPT Anchors Log.md  01_GPT_Anchors_Log.md  01_Unguided_Capstone_Runbook.md  02_Mentor Submission & Cleanup Workflow.md  02_Mentor_Submission_&_Cleanup_Workflow.md  03_README_TODO.md  04_QA_Suite_magic_numbers_and_Config_Audits.md  100_Pipeline_Run_Book.md  98_GPT_Tickler_Log.md  99_Unguided Capstone - Working Anchor.md  99_Unguided_Capstone_To_Do.md  CHANGELOG.md  DevOps.md  GPT Anchors Log.md  Git_Tag_Methodology.md  QA_Suite_magic_numbers_and_Config_Audits.md  README.md  README_Config.md  Unguided Capstone - Working Anchor.md  magic_number_info.md  mentor_workflow.md  pipeline_run_diagnostics.md  prototype_pipeline_summary.md  quick_start.md  sync_log.md  to_do_development.md
evidence/: validation.ipynb
infrastructure/: adf_template.json  databricks.bicep  databricks.json  databricks_template.json  functionapp.bicep  keyvault.bicep  keyvault_template.json  main.bicep  main.json  monitoring.bicep  monitoring.json  monitoring_template.json  naming_conventions.md  quotas.json  storage_account.bicep  storage_account.json  storage_template.json  test.json  ungcap-step8-test.json  vnet.bicep
notebooks/: AuxWork.ipynb  Capstone_Step_4_Analysis.ipynb  Data_Inspection.ipynb  Data_Inspection_Notebook.ipynb  EDA_loose_vs_zero.ipynb  Pipeline_Runner.ipynb  Pipeline_Runner_Notebook.ipynb  README.md  ScratchPad.py.ipynb  Step_4_EDA.ipynb  Step_4_wrapup.ipynb  Step_4_wrapup_combined.ipynb  Step_4_wrapup_with_visuals.ipynb  Testing.ipynb  Testing_Notebook.ipynb  Unguided Capstone – Step 6 (Scale Your Prototype): Databricks + ADLS Integratio.ipynb  Unguided Capstone – Step 6 Databricks with ADLS Integration.ipynb
(+269 files in other folders)
